<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_home_activity"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_home_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/text_view_app_name_home_activity"
                    style="@style/pokemon_logo_style_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/material_margin_4"
                    android:padding="@dimen/material_margin_4"
                    android:text="@string/app_name"
                    android:visibility="visible" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/welcome_text_view_home_activity"
            style="@style/style_welcome_text_main_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_16"
            android:layout_marginTop="@dimen/material_margin_16"
            android:layout_marginEnd="@dimen/material_margin_16"
            android:text="@string/welcome_screen_message"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_home_activity" />

        <ImageView
            android:id="@+id/image_view_snorlax_welcome_home_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_16"
            android:layout_marginTop="@dimen/material_margin_16"
            android:layout_marginEnd="@dimen/material_margin_16"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text_view_home_activity"
            app:srcCompat="@drawable/first_time_snorlax" />

        <Button
            android:id="@+id/button_discover_pokes_home_activity"
            style="@style/button_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_margin_16"
            android:layout_marginTop="@dimen/material_margin_16"
            android:layout_marginEnd="@dimen/material_margin_16"
            android:layout_marginBottom="@dimen/material_margin_24"
            android:text="@string/button_activity_discover_pokes"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_snorlax_welcome_home_activity" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/nav_host_fragment_home_activity"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>